# genai-med-chat

./: .dockerignore  .gitignore  README.md  tls.crt  tls.key
.github/workflows/: ci.yml  docker-build-push.yml
backend/: schemas.sql
backend/app/: Makefile  pyproject.toml
backend/app/gateway/: Dockerfile  pyproject.toml
backend/app/gateway/gateway/: main.py
backend/app/gateway/shared/: config.py  tracing.py
backend/app/services/ai_service/: Dockerfile  pyproject.toml
backend/app/services/ai_service/ai_service/: auth.py  main.py  pipeline.py  rag.py  security.py
backend/app/services/ai_service/shared/: mongo.py
backend/app/services/chat_service/: Dockerfile  pyproject.toml
backend/app/services/chat_service/chat_service/: main.py
backend/app/services/chat_service/chat_service/api/v1/: chat.py  graph.py  ingest.py  ocr.py  voice.py
backend/app/services/chat_service/chat_service/core/: auth.py
backend/app/services/chat_service/chat_service/services/: chat_service.py  ingest_service.py  langgraph_service.py
backend/app/services/chat_service/shared/: __init__.py
backend/app/services/chat_service/tests/: test_chat_api.py
backend/app/services/product_service/: pyproject.toml
backend/app/services/product_service/product_service/: main.py
backend/app/services/user_service/: Dockerfile  pyproject.toml
backend/app/services/user_service/user_service/: main.py  models.py  schemas.py
backend/app/services/user_service/user_service/api/: auth.py
backend/app/services/user_service/user_service/core/: security.py
backend/app/shared/: logger.py  mongo_repo.py  pyproject.toml  tracing.py
backend/app/shared/shared/: config.py  database.py  logger.py  model_adapter.py  mongo.py  mongo_repo.py  mysql_repo.py
backend/scripts/: export_training_data.py  fine_tune.py  ingest_documents.py  init_db.py  migrate_mongo.py
backend/tests/: conftest.py  test_chat.py  test_graph.py  test_ingest.py  test_ocr.py  test_voice.py
backend/worker/: Dockerfile  celery_worker.py
frontend/: .dockerignore  Dockerfile  clean_frontend.sh  jest.config.js  package-lock.json  package.json  run_frontend.sh
frontend/tests/: LoginForm.test.jsx  RegisterForm.test.jsx  authSlice.test.js  chatSlice.test.js
frontend/tests/__mocks__/: gsap.js
infra/: Architecture_Guide.md  Development_Guide.md  collect_logs.sh  docker-compose.yml  grafana-datasources.yaml  k8s-plan.txt  loki-config.yaml  prometheus.yaml  promtail-config.yaml  run_containers.sh  setup_infra.sh  tempo.yaml  uvicorn_logging.yaml
infra/K3s/charts/genai/: Chart.yaml  values-k3s.yaml  values.yaml
infra/K3s/charts/genai/templates/: ai.yaml  chat.yaml  configmap.yaml  frontend.yaml  gateway.yaml  hpa.yaml  ingress.yaml  mongo.yaml  qdrant.yaml  redis.yaml  secrets.yaml  storage.yaml  user.yaml  worker.yaml
infra/K3s/charts/genai/templates/observability/: grafana-dashboards.yaml  grafana.yaml  loki.yaml  prometheus.yaml  promtail.yaml  tempo.yaml
infra/configs/: docker-compose-version.txt  k8s-plan.txt  uvicorn_logging.yaml
infra/k8s/: ai-deployment.yaml  chat-deployment.yaml  configmap.yaml  frontend-deployment.yaml  gateway-deployment.yaml  hpa.yaml  ingress.yaml  mongo-statefulset.yaml  qdrant-statefulset.yaml  redis-deployment.yaml  secrets.yaml  storage.yaml  user-deployment.yaml  worker-deployment.yaml
infra/k8s/charts/genai/: values.yaml
infra/k8s/charts/genai/templates/: chat.yaml  gateway.yaml  hpa.yaml  ingress.yaml  mongo.yaml  qdrant.yaml  redis.yaml  secrets.yaml  storage.yaml  worker.yaml
infra/k8s/charts/genai/templates/observability/: grafana.yaml  prometheus.yaml  promtail.yaml  tempo.yaml
infra/local/: docker-compose.yml  start_local.ps1  stop_local.ps1
infra/local/observability/: grafana-datasources.yaml  loki-config.yaml  prometheus.yaml  promtail-config.yaml  tempo.yaml
infra/logs/: genai_ai_service.txt  genai_chat_service.txt  genai_frontend.txt  genai_gateway.txt  genai_mysql.txt  genai_phpmyadmin.txt  genai_qdrant.txt  genai_redis.txt  genai_worker.txt  watchtower.txt
infra/observability/: grafana-datasources.yaml  loki-config.yaml  prometheus.yaml  promtail-config.yaml  tempo.yaml
infra/scripts/: bootstrap.sh  collect_logs.sh  fix_kind_ingress.sh  install_with_env.sh  install_wsl_tools.sh  kind_bootstrap.sh  uninstall.sh  upgrade.sh
