[tool.poetry]
name = "microservices-python"
version = "0.1.0"
description = "Poetry workspace root for FastAPI microservices"
authors = ["Suraj Shetty <suraj@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"