[tool.poetry]
name = "gateway"
version = "0.1.0"
description = "API gateway proxy for microservices"
authors = ["Suraj Shetty <suraj@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
httpx = "^0.27.0"
shared = { path = "../shared", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"