[project]
name = "gateway"
version = "0.1.0"
description = "API gateway proxy for microservices"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "shared"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gateway"]