[tool.poetry]
name = "shared"
version = "0.1.0"
description = "Shared utilities for microservices"
authors = ["Suraj Shetty <suraj@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.3.0"
sqlalchemy = "^2.0.0"
requests = "^2.32.0"
pymysql = "^1.1.0"
transformers = "^4.44.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"