[project]
name = "shared"
version = "0.1.0"
description = "Shared utilities for microservices"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.0.0",
  "sqlalchemy>=2.0.0",
  "pymongo>=4.6.0",
]
  "requests>=2.32.0",
  "pymysql>=1.1.0",
  "transformers>=4.44.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]
