[project]
name = "ai_service"
version = "0.1.0"
description = "AI microservice for generation, OCR, ASR, and embeddings"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "shared"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_service"]
