[tool.poetry]
name = "chat_service"
version = "0.1.0"
description = "GenAI medical chat microservice"
authors = ["Suraj Shetty <suraj@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
shared = { path = "../../shared", develop = true }
sqlalchemy = "^2.0.0"
pydantic = "^2.6.0"
python-multipart = "^0.0.6"
aiohttp = "^3.9.0"
httpx = "^0.27.0"
transformers = "^4.44.0"
sentence-transformers = "^3.0.0"
langchain = "^0.2.0"
qdrant-client = "^1.7.0"
pillow = "^10.0.0"
pytesseract = "^0.3.10"




[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"