[project]
name = "chat_service"
version = "0.1.0"
description = "GenAI medical chat microservice"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.30.0",
  "shared",
  "sqlalchemy>=2.0.0",
  "pydantic>=2.6.0",
  "python-multipart>=0.0.6",
  "aiohttp>=3.9.0",
  "httpx>=0.27.0",
  "transformers>=4.44.0",
  "sentence-transformers>=3.0.0",
  "langchain>=0.2.0",
  "qdrant-client>=1.7.0",
  "pillow>=10.0.0",
  "pytesseract>=0.3.10"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chat_service"]