[project]
name = "chat_service"
version = "0.1.0"
description = "GenAI medical chat microservice"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.30.0",
  "shared",
  "sqlalchemy>=2.0.0",
  "pydantic>=2.6.0",
  "python-multipart>=0.0.6",
  "aiohttp>=3.9.0",
  "httpx>=0.27.0",
  "langchain>=0.2.0",
  "qdrant-client>=1.7.0",
  "opentelemetry-api>=1.25.0",
  "opentelemetry-sdk>=1.25.0",
  "opentelemetry-exporter-otlp>=1.25.0",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "opentelemetry-instrumentation-requests>=0.46b0",
  "opentelemetry-instrumentation-logging>=0.46b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.46b0",
  "python-jose[cryptography]>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chat_service"]
